<resources>
    <string name="app_name">DentalCare</string>
    <string name="name_label">Nombre Completo</string>
    <string name="email_label">Correo Electrónico</string>
    <string name="number_label">Número de teléfono</string>
    <string name="password_label">Contraseña</string>
    <string name="label_text_gender">Seleccione su género</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="signup_fragment_text_button">Registrarse</string>
    <string name="signup_fragment_text_login">¡Iniciar Sesión!</string>
    <string name="signup_fragment_text_info">Ya tengo cuenta</string>
    <string name="login_fragment_text_info">No tengo cuenta</string>
    <string name="login_fragment_text_signup">¡Registrate ahora!</string>
    <string name="label_text_password">¿Olvidaste la contraseña?</string>
    <string name="login_fragment_text_button">Ingresar</string>
    <string name="forget_email_label">Ingrese su correo electrónico</string>
    <string name="forget_fragment_text_button">Cambiar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menú Hamburguesa (lateral) -->
    <string name="name_nav">Barra de navegación</string>
    <string name="open_nav">Abrir barra de navegación</string>
    <string name="close_nav">Cerrar barra de navegación</string>

    <!-- Mensaje de cancelacion de cita -->
    <string name="text_info_cita">Por favor, tenga en cuenta que al eliminar su cita, esta será removida de nuestra base de datos de forma permanente y no podrá ser recuperada. Si lo desea, deberá programar una nueva cita.</string>

</resources>